[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/fonteES.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/MinigameApple.gd" type="Script" id=2]
[ext_resource path="res://Sprites/SpritesMinigame/MinigameApple/fundoapple.png" type="Texture" id=3]

[sub_resource type="StreamTexture" id=15]
load_path = "res://.import/CaixacONCLUIR.png-7e9c514c6d2f80185adea1d90a7b3e36.stex"

[node name="Node2D" type="Node2D"]
position = Vector2( 136, 72 )
scale = Vector2( 1.51492, 1.37858 )
script = ExtResource( 2 )

[node name="Fundoapple" type="Sprite" parent="."]
position = Vector2( 517.519, 343.107 )
scale = Vector2( 0.702348, 0.72403 )
texture = ExtResource( 3 )

[node name="ButtonSeg" type="Button" parent="."]
margin_left = 749.214
margin_top = 219.791
margin_right = 871.214
margin_bottom = 267.791
custom_colors/font_color_disabled = Color( 0, 1, 0, 1 )
custom_colors/font_color_focus = Color( 0, 1, 0, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "Segurança"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonVel" type="Button" parent="."]
margin_left = 892.703
margin_top = 219.791
margin_right = 1014.7
margin_bottom = 267.791
custom_colors/font_color_disabled = Color( 0, 1, 0, 1 )
custom_colors/font_color_focus = Color( 0, 1, 0, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "Velocidade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPro" type="Button" parent="."]
margin_left = 748.555
margin_top = 285.304
margin_right = 870.555
margin_bottom = 333.304
custom_colors/font_color_disabled = Color( 0, 1, 0, 1 )
custom_colors/font_color_focus = Color( 0, 1, 0, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "Promoção"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRes" type="Button" parent="."]
margin_left = 892.703
margin_top = 285.304
margin_right = 1014.7
margin_bottom = 333.304
custom_colors/font_color_disabled = Color( 0, 1, 0, 1 )
custom_colors/font_color_focus = Color( 0, 1, 0, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "Restaurante"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonErr" type="Button" parent="."]
margin_left = 748.555
margin_top = 350.817
margin_right = 870.555
margin_bottom = 398.817
custom_colors/font_color_disabled = Color( 0, 1, 0, 1 )
custom_colors/font_color_focus = Color( 0, 1, 0, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "Erros"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFac" type="Button" parent="."]
margin_left = 892.703
margin_top = 350.817
margin_right = 1014.7
margin_bottom = 398.817
custom_colors/font_color_disabled = Color( 0, 1, 0, 1 )
custom_colors/font_color_focus = Color( 0, 1, 0, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "Facilidade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAtr" type="Button" parent="."]
margin_left = 748.554
margin_top = 416.33
margin_right = 870.554
margin_bottom = 464.33
custom_colors/font_color_disabled = Color( 0, 1, 0, 1 )
custom_colors/font_color_focus = Color( 0, 1, 0, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "Atraso"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGol" type="Button" parent="."]
margin_left = 892.703
margin_top = 416.33
margin_right = 1014.7
margin_bottom = 464.33
custom_colors/font_color_disabled = Color( 0, 1, 0, 1 )
custom_colors/font_color_focus = Color( 0, 1, 0, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "Golpes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditFun" type="LineEdit" parent="."]
margin_left = 165.983
margin_top = 238.93
margin_right = 293.983
margin_bottom = 279.93
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditFun2" type="LineEdit" parent="."]
margin_left = 165.983
margin_top = 298.487
margin_right = 293.983
margin_bottom = 339.487
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditFun3" type="LineEdit" parent="."]
margin_left = 165.983
margin_top = 358.044
margin_right = 293.983
margin_bottom = 399.044
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditFun4" type="LineEdit" parent="."]
margin_left = 165.983
margin_top = 417.601
margin_right = 293.983
margin_bottom = 458.601
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditVar" type="LineEdit" parent="."]
margin_left = 443.191
margin_top = 238.93
margin_right = 571.191
margin_bottom = 279.93
custom_colors/font_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditVar2" type="LineEdit" parent="."]
margin_left = 443.191
margin_top = 298.487
margin_right = 571.191
margin_bottom = 339.487
custom_colors/font_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditVar3" type="LineEdit" parent="."]
margin_left = 443.191
margin_top = 358.044
margin_right = 571.191
margin_bottom = 399.044
custom_colors/font_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditVar4" type="LineEdit" parent="."]
margin_left = 443.191
margin_top = 416.856
margin_right = 571.191
margin_bottom = 457.856
custom_colors/font_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAumentar" type="Button" parent="."]
margin_left = 55.4416
margin_top = 518.146
margin_right = 258.442
margin_bottom = 603.146
rect_scale = Vector2( 1.06612, 1.00324 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Aumentar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDiminuir" type="Button" parent="."]
margin_left = 310.473
margin_top = 518.146
margin_right = 513.473
margin_bottom = 603.146
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Diminuir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelProblema" type="Label" parent="."]
margin_left = 22.0
margin_top = 37.0
margin_right = 761.0
margin_bottom = 262.0
rect_scale = Vector2( 1.00795, 0.983537 )
custom_fonts/font = ExtResource( 1 )
text = "Gostei do aplicativo, mas acredito que precisa de algumas melhorias.
Primeiro, precisa de mais opções de restaurantes. Segundo, quase
nunca encontro promoções ou quando as encontro, não funcionam. 
Por último, não achei o aplicativo intuitivo. Ele é muito complexo e 
difícil de mexer, o que, com certeza, me leva a usá-lo menos.
Dica: colo	que os problemas na ordem em que a cliente digitou."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFuncoes" type="Label" parent="."]
margin_left = 221.766
margin_top = 470.501
margin_right = 363.766
margin_bottom = 516.501
rect_scale = Vector2( 1.82538, 1.80819 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Funções"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFunc" type="Label" parent="."]
margin_left = 74.5914
margin_top = 243.729
margin_right = 131.591
margin_bottom = 271.729
rect_scale = Vector2( 1.93814, 1.91494 )
rect_pivot_offset = Vector2( 32.356, 16.6326 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Func"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFuncoes2" type="Label" parent="."]
margin_left = 809.447
margin_top = 142.937
margin_right = 975.447
margin_bottom = 188.937
rect_scale = Vector2( 1.55448, 1.55448 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Variáveis"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVar" type="Label" parent="."]
margin_left = 299.0
margin_top = 227.0
margin_right = 370.0
margin_bottom = 256.0
rect_scale = Vector2( 1.92414, 1.92414 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = " () var"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaixaEscolhas" type="Sprite" parent="."]
position = Vector2( 887.065, 565.792 )
scale = Vector2( 0.119373, 0.139076 )
texture = SubResource( 15 )

[node name="Buttonconcluir" type="Button" parent="CaixaEscolhas"]
margin_left = -975.0
margin_top = -217.0
margin_right = 929.0
margin_bottom = 182.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPontos" type="Label" parent="."]
margin_left = 804.0
margin_top = 59.0
margin_right = 937.0
margin_bottom = 95.0
rect_scale = Vector2( 1.82188, 1.91085 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Pontos: 000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFunc2" type="Label" parent="."]
margin_left = 73.9313
margin_top = 303.211
margin_right = 130.931
margin_bottom = 331.211
rect_scale = Vector2( 1.93814, 1.91494 )
rect_pivot_offset = Vector2( 32.356, 16.6326 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Func"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFunc3" type="Label" parent="."]
margin_left = 73.2712
margin_top = 364.143
margin_right = 130.271
margin_bottom = 392.143
rect_scale = Vector2( 1.93814, 1.91494 )
rect_pivot_offset = Vector2( 32.356, 16.6326 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Func"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFunc4" type="Label" parent="."]
margin_left = 73.2712
margin_top = 427.251
margin_right = 130.271
margin_bottom = 455.251
rect_scale = Vector2( 1.93814, 1.91494 )
rect_pivot_offset = Vector2( 32.356, 16.6326 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Func"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVar2" type="Label" parent="."]
margin_left = 299.686
margin_top = 288.703
margin_right = 370.686
margin_bottom = 317.703
rect_scale = Vector2( 1.92414, 1.92414 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = " () var"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVar3" type="Label" parent="."]
margin_left = 302.326
margin_top = 348.184
margin_right = 373.326
margin_bottom = 377.184
rect_scale = Vector2( 1.92414, 1.92414 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = " () var"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVar4" type="Label" parent="."]
margin_left = 302.326
margin_top = 406.94
margin_right = 373.326
margin_bottom = 435.94
rect_scale = Vector2( 1.92414, 1.92414 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = " () var"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CaixaEscolhas/Buttonconcluir" to="." method="_on_Buttonconcluir_pressed"]
